--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -7,28 +7,31 @@
 
 - implement wale;
 - integrate wale and stitch with knit;
-- improve exception support.
+- implement dart.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-24 Mon 10:39]
+#+CAPTION: Clock summary at [2016-10-24 Mon 11:35]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:37* |      |      | 100.0 |
+| *Total time*                                                                | *1:26* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:37   |      |      | 100.0 |
-| Active                                                                      |        | 0:37 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:09 |  24.3 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:22 |  59.5 |
-| COMPLETED Improve bintray support                                           |        |      | 0:06 |  16.2 |
+| Stories                                                                     | 1:26   |      |      | 100.0 |
+| Active                                                                      |        | 1:26 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:44 |  51.2 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:22 |  25.6 |
+| COMPLETED Improve bintray support                                           |        |      | 0:06 |   7.0 |
+| COMPLETED Add logo with white background                                    |        |      | 0:14 |  16.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-10-24 Mon 11:12]--[2016-10-24 Mon 11:31] =>  0:19
+    CLOCK: [2016-10-24 Mon 10:55]--[2016-10-24 Mon 11:11] =>  0:16
     CLOCK: [2016-10-24 Mon 10:01]--[2016-10-24 Mon 10:10] =>  0:09
 
 Updates to sprint and product backlog.
@@ -74,7 +77,70 @@ if we can fix some of the errors of the previous sprint.
 Now we started tweeting releases we need a version of the logo that
 has a background.
 
+*** Consider renaming =diagrams= to =models=                          :story:
+
+The name "diagrams" is a bit misleading. These are not just diagrams,
+they are specifically Dogen inputs. We need a name that is a bit more
+meaningful. For example, if we start creating models in JSON, it would
+render the directory name meaningless. We should call the directory
+=models=.
+
+*** Implement wale templates                                          :story:
+
+- manually create wale templates for header and implementation and do
+  a mental dry-run to ensure it will work. Do also a stitch template
+  manually for this exercise.
+- create projects, library and binary.
+- implement library with a simple transformer that takes in a path to
+  template and a set of kvps. Add the ability to obtain all the keys
+  for a given template.
+
+*** Add region support to stitch                                      :story:
+
+- extend stitch to allow injecting external kvps such as
+  decoration. This can probably be done manually but needs to be
+  investigated.
+- extend stitch to support named regions; the text template will
+  preserve the names after template instantiation.
+- note: regions are a property of the artefact. knit will also have to
+  support regions. Perhaps we should start having well-defined regions
+  such as =decoration.preamble=, =decoration.postamble=, etc.
+
+*** Add artefact source properties support                            :story:
+
+- add properties to artefact properties, with enumeration for source:
+  stock formatter (current), wale formatter, wale and stitch
+  formatter. Other possible types: null formatter, copy formatter.
+- add new expander.
+- hook it in with formattables workflow.
+
+Examples:
+
+: quilt.cpp.serialization.class_header.formatting_style=stock
+: quilt.cpp.serialization.class_header.formatting_input=a/b/c.wale
+
+*** Add new formatter types                                           :story:
+
+- add new kinds of formatters to process wale templates, etc.
+- Each formatter should check for its required data. They can be
+  mainly stubs for now.
+- change the formatters workflow to dispatch to the correct formatter
+  type.
+- implement the new formatters by calling stitch and wale as required.
+- for stitch formatter, inject the stitch template into the
+  housekeeping files so we don't delete it.
+
 *** Integration of stitch and dogen                                   :story:
+
+Tasks:
+
+- create wale templates for formatter header and implementation;
+- go through all formatters and: a) update the stitch template with
+  the code from implementation, adding regions b) change the source
+  type to wale and stitch and deal with the fallout.
+- when all formatters are done, remove regexes for stitch templates.
+
+*Previous Understanding*
 
 Now that we have implemented stitch and proved it works (more or
 less), we need to think how we can make using stitch from dogen
@@ -288,6 +354,113 @@ Further thoughts:
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
 
+*** Supply model references via meta-data rather than command line    :story:
+
+It doesn't make any sense to have model dependencies in the command
+line. After all, the model cannot be interpreted without them. A
+better way to do this would be to split this functionality into two:
+
+- command line supplies "import directories", that is, directories
+  to search when looking for models. By default the system directory
+  is already in the path.
+- model supplies "import statements". The problem here is that we need
+  to also supply the file name of the model. We could perhaps omit the
+  extension and then load all files that match (e.g. =.dia=, =.json=,
+  etc). If more than one matches we should error. Actually we should
+  just supply the full filename, as well as keep the current notation
+  for the external project path.
+
+This is also a nice way to avoid loading system models unnecessary;
+users still need to declare the models they depend on, regardless if
+system or user.
+
+Each model should also supply the external module path as meta-data.
+
+This is particularly painful since cross-model inheritance was
+introduced because it means references are now transitive (we need to
+know of the references of any model we reference). Once we add them to
+the model, we should also load referenced models' references so that
+the process is automatic.
+
+Merged stories
+
+*External module path and references as meta-data*
+
+It actually does not make a lot of sense to allow users to supply
+external module paths and references as command line options. This is
+because the model will fail to build unless we provide the correct
+ones; these are not configurable items in this sense. The project
+path, etc are - and so should remain command line options.
+
+We need to move these two into the meta-data. This would also mean we
+no longer need to pass in external module paths for references, which
+is much cleaner.
+
+*** Create a tool to generate product skeletons                       :story:
+
+Now that dogen is evolving to a MDSD tool, it would be great to be
+able to create a complete product skeleton from a tool. This would
+entail:
+
+- directory structure. We should document our standard product
+  directory structure as part of this exercise. Initial document added
+  to manual as "project_structure.org".
+- licence: user can choose one.
+- copyright: input by user, used in CMakeFiles, etc. added to the
+  licence.
+- CI support: travis, appveyor
+- EDE support:
+- CMake support: top-level CMakefiles, CPack. versioning
+  templates, valgrind, doxygen. For CTest we should also generate a
+  "setup cron" and "setup windows scheduler" scripts. User can just
+  run these from the build machine and it will start running CTest.
+- conan support: perhaps with just boost for now
+- agile with first sprint
+- README with emblems.
+
+Name for the tool: dart.
+
+Tool should have different "template sets" so that we could have a
+"standard dogen product" but users can come up with other project
+structures.
+
+Tool should add FindODB if user wants ODB support. Similar for EOS
+when we support it again. We should probably have HTTP links to the
+sources of these packages and download them on the fly.
+
+Tool should also create git repo and do first commit (optional).
+
+For extra bonus points, we should create a project in GitHub, Travis
+and AppVeyor from dart.
+
+We should also generate a RPM/Deb installation script for at least
+boost, doxygen, build essentials, clang.
+
+We should also consider a "refresh" or "force" statement, perhaps on a
+file-by-file basis, which would allow one to regenerate all of these
+files. This would be useful to pick-up changes in travis files, etc.
+
+One problem with travis files is that each project has its own
+dependencies. We should move these over to a shell script and call
+these. The script is not generated or perhaps we just generate a
+skeleton. This also highlights the issue that we have different kinds
+of files:
+
+- files that we generate and expect the user to modify;
+- files that we generate but don't expect user modifications;
+- files that the user generates.
+
+We need a way to classify these.
+
+Dart should use stitch templates to generate files.
+
+We may need some options such as "generate boost test ctest
+integration", etc.
+
+Notes:
+
+- [[https://github.com/elbeno/skeleton][Skeleton]]: project to generate c++ project skeletons.
+
 *** Consider adding =artefact_set= to formatters' model               :story:
 
 We are using collections of artefacts quite a bit, and it makes sense
@@ -323,3 +496,14 @@ when we move to a mustache world where there may not be a formatter
 header file at all.
 
 ** Deprecated
+*** CANCELLED Consider moving dia diagrams to their own project       :story:
+    CLOSED: [2016-10-24 Mon 11:30]
+
+*Rationale*: its handy having all diagrams in one place.
+
+We originally create a diagrams top-level directory for all of the
+diagrams that generate dogen models. However it may make more sense to
+have the diagrams closer to the project they generate; for example a
+folder within the project. The downside of this approach is that we
+now have to make references across projects; we could use relative
+paths for this but the targets will still look verbose.
