--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,22 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-24 Mon 11:35]
+#+CAPTION: Clock summary at [2016-10-24 Mon 11:46]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:26* |      |      | 100.0 |
+| *Total time*                                                                | *1:40* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:26   |      |      | 100.0 |
-| Active                                                                      |        | 1:26 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:44 |  51.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:22 |  25.6 |
-| COMPLETED Improve bintray support                                           |        |      | 0:06 |   7.0 |
-| COMPLETED Add logo with white background                                    |        |      | 0:14 |  16.3 |
+| Stories                                                                     | 1:40   |      |      | 100.0 |
+| Active                                                                      |        | 1:40 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:58 |  58.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:22 |  22.0 |
+| COMPLETED Improve bintray support                                           |        |      | 0:06 |   6.0 |
+| COMPLETED Add logo with white background                                    |        |      | 0:14 |  14.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-10-24 Mon 11:32]--[2016-10-24 Mon 11:46] =>  0:14
     CLOCK: [2016-10-24 Mon 11:12]--[2016-10-24 Mon 11:31] =>  0:19
     CLOCK: [2016-10-24 Mon 10:55]--[2016-10-24 Mon 11:11] =>  0:16
     CLOCK: [2016-10-24 Mon 10:01]--[2016-10-24 Mon 10:10] =>  0:09
